--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.19.1",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4"
   }
